--- a/main.html
+++ b/main.html
@@ -95,4 +95,4 @@
         <div id="footer"></div>
     </div>
 </body>
-<script src="mainscript.js"></script>
+<script src="/mainscript.js"></script>
